meta information updated

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <meta name="description" content="Share your ideas, skill, knowledge for system Engineers. " />
 <meta property="og:title" content="Hugo Whisper Theme" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://hugo-whisper.netlify.com" />
-<meta property="og:image" content="https://raw.githubusercontent.com/JugglerX/hugo-whisper-theme/master/images/tn.png" />
+<meta property="og:url" content="https://tecnep.com" />
+<meta property="og:image" content="https://tecnep.com" />
 <meta property="og:description" content="Share your ideas, skill, knowledge for system Engineers." />
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content="@tecnepcom" />
