meta information updated official

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
 <meta name="description" content="Share your ideas, skill, knowledge for system Engineers. " />
-<meta property="og:title" content="Hugo Whisper Theme" />
+<meta property="og:title" content="Linux | System Engineer" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://tecnep.com" />
 <meta property="og:image" content="https://tecnep.com" />
