--- a/dns/dmarc/index.html
+++ b/dns/dmarc/index.html
@@ -198,6 +198,10 @@ header.from = mail.tecnep.com
 <li class=""><a href="https://tecnep.com/haproxy/">Haproxy</a>
   
 </li>
+
+<li class=""><a href="https://tecnep.com/php_nginx_mysql/">Php Nginx Mysql</a>
+  
+</li>
 </ul>
 </nav>
 
