--- a/firewall/firewall_keepalive/index.html
+++ b/firewall/firewall_keepalive/index.html
@@ -171,6 +171,10 @@ You can allow firewall to accept vrrp protocol, which will allow you keepalive w
 <li class=""><a href="https://tecnep.com/haproxy/">Haproxy</a>
   
 </li>
+
+<li class=""><a href="https://tecnep.com/php_nginx_mysql/">Php Nginx Mysql</a>
+  
+</li>
 </ul>
 </nav>
 
