--- a/firewall/rich_rule/index.html
+++ b/firewall/rich_rule/index.html
@@ -177,6 +177,10 @@ port protocol=&quot;tcp&quot; port=&quot;22&quot; accept'
 <li class=""><a href="https://tecnep.com/haproxy/">Haproxy</a>
   
 </li>
+
+<li class=""><a href="https://tecnep.com/php_nginx_mysql/">Php Nginx Mysql</a>
+  
+</li>
 </ul>
 </nav>
 
