--- a/haproxy/index.html
+++ b/haproxy/index.html
@@ -54,7 +54,7 @@
 <br>
 <a href="https://github.com/pratikgautm/tecnep" class="edit-page"><i class="fas fa-pen-square"></i> Edit on GitHub</a>
 </div><nav class="pagination"><a class="nav nav-prev" href="https://tecnep.com/nas_san/" title="NAS and SAN"><i class="fas fa-arrow-left" aria-hidden="true"></i> Prev - NAS and SAN</a>
-<a class="nav nav-next" href="https://tecnep.com/hardening/" title="System Hardening">Next - System Hardening <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
+<a class="nav nav-next" href="https://tecnep.com/php_nginx_mysql/" title="Php Nginx Mysql">Next - Php Nginx Mysql <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
 </nav><footer>
 <p class="powered"> Developers <a href="https://tecnep.com"> tecnep.com </a> </p>
 </footer>
@@ -152,6 +152,10 @@
 </li>
 
 <li class="parent active"><a href="https://tecnep.com/haproxy/">Haproxy</a>
+  
+</li>
+
+<li class=""><a href="https://tecnep.com/php_nginx_mysql/">Php Nginx Mysql</a>
   
 </li>
 </ul>
