--- a/hardening/index.html
+++ b/hardening/index.html
@@ -261,7 +261,7 @@ yum install lynis -y
 </code></pre><pre><code>grep Warning /var/log/lynis.log
 </code></pre><hr>
 <p>Pratik Gautam
-<a href="mailto:pratikgautme@gmail.come">pratikgautme@gmail.come</a></p>
+<a href="mailto:pratikgautm@gmail.com">pratikgautm@gmail.com</a></p>
 <div class="edit-meta">
 <br>
 <a href="https://github.com/pratikgautm/tecnep" class="edit-page"><i class="fas fa-pen-square"></i> Edit on GitHub</a>
@@ -364,6 +364,10 @@ yum install lynis -y
 </li>
 
 <li class=""><a href="https://tecnep.com/haproxy/">Haproxy</a>
+  
+</li>
+
+<li class=""><a href="https://tecnep.com/php_nginx_mysql/">Php Nginx Mysql</a>
   
 </li>
 </ul>
