--- a/mailcleaner/index.html
+++ b/mailcleaner/index.html
@@ -54,7 +54,7 @@ Antivirus are the program to protect the system from virus. ClamAV open source a
 <p><code>Quarantine</code></p>
 <p>An isolated area on a server where email messages that are suspected to be spam are stored temporarily so that they can be reviewed and retrieved if necessary. Messages that are not released from the Quarantine are automatically deleted after a designated period of time.</p>
 <p><code>Email Spoofing</code></p>
-<p>Email spoofing is the fabrication of an email which makes email originated from someone or somewhere other than the intended source. The ultimate goal of email spoofing is to get recipients to open, and possibly even respond to, a solicitation. The technology like <a href="/docs/spf">SPF</a>, <a href="/docs/dkim">DKIM</a> and <a href="/docs/dmarc">DMARC</a> are used to protect email spoofing.</p>
+<p>Email spoofing is the fabrication of an email which makes email originated from someone or somewhere other than the intended source. The ultimate goal of email spoofing is to get recipients to open, and possibly even respond to, a solicitation. The technology like <a href="/dns/spf">SPF</a>, <a href="/dns/dkim">DKIM</a> and <a href="/dns/dmarc">DMARC</a> are used to protect email spoofing.</p>
 <p><code>Greylist</code></p>
 <p>Grey Listing is a method of defending against spam messages. Enabling grey listing will &ldquo;temporarily reject&rdquo; any email from a sender by sending 4xx reply codes <code>please call back later</code>. If the mail is legitimate, the originating server will try again after a delay, and if sufficient time has elapsed, the email will be accepted. Most legitimate email servers will retry sending an undeliverable message whereas spammers who want to send millions of messages do not retry.</p>
 <p><code>RBLs</code></p>
@@ -196,6 +196,10 @@ Antivirus are the program to protect the system from virus. ClamAV open source a
 </li>
 
 <li class=""><a href="https://tecnep.com/haproxy/">Haproxy</a>
+  
+</li>
+
+<li class=""><a href="https://tecnep.com/php_nginx_mysql/">Php Nginx Mysql</a>
   
 </li>
 </ul>
