--- a/redis/index.html
+++ b/redis/index.html
@@ -167,6 +167,7 @@ Following are the helpful redis command</p>
 <li class=" has-sub-menu"><a href="https://tecnep.com/system_resources/">System Resources<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
+<li class=""><a href="https://tecnep.com/system_resources/increase_hd/">Increase hard disk</a></li>
 </ul>
   
 </li>
@@ -202,6 +203,10 @@ Following are the helpful redis command</p>
 </li>
 
 <li class=""><a href="https://tecnep.com/haproxy/">Haproxy</a>
+  
+</li>
+
+<li class=""><a href="https://tecnep.com/php_nginx_mysql/">Php Nginx Mysql</a>
   
 </li>
 </ul>
