--- a/kaspersky/index.html
+++ b/kaspersky/index.html
@@ -176,6 +176,10 @@ Systemctl enable kesl-supervisor
 <li class=""><a href="https://tecnep.com/haproxy/">Haproxy</a>
   
 </li>
+
+<li class=""><a href="https://tecnep.com/php_nginx_mysql/">Php Nginx Mysql</a>
+  
+</li>
 </ul>
 </nav>
 
