--- a/keepalive/index.html
+++ b/keepalive/index.html
@@ -43,7 +43,39 @@
 </nav>
 </div>
 <div class="content-container">
-<main><h1>Keepalive</h1><p>Keepalive provides frameworks for both load balancing and high availability mechanism.</p>
+<main><h1>Keepalive</h1><p>Keepalived is use to set up a highly available web service by using a floating IP address that can be moved between two capable web servers. The keepalived daemon can be used to monitor services or systems and to automatically failover to a standby if there&rsquo;s any problems occur. If the primary server goes down, the floating IP will be moved to the second server automatically, allowing service to resume by the help of floating IP.</p>
+<p>Keepalive provides frameworks for both load balancing and high availability mechanism. Load balancing framework relies on <code>linux virtual server (LVS)</code> kernel module based on layer 4. High availability is achieved by VRRP (Virtual redundancy routing protocol).</p>
+<h5 id="installation">Installation</h5>
+<p>Use the following command,</p>
+<pre><code>yum install keepalived -y
+</code></pre><p>Start and enable it using,</p>
+<pre><code>systemctl start Keepalived
+systemctl enable keepalived
+</code></pre><p>If you have enabled firewall you need to allow VRRP protocol to work keepalived correctly. See <a href="/firewall/firewall_keepalive/">firewall&amp;keepalive</a> to configure keepalived for centos 7 firewall.</p>
+<h5 id="configuration">Configuration</h5>
+<p>Basic configuration is present in  <code>/etc/keepalived/keepalived.conf</code> . Lets see it and describe it briefly.</p>
+<pre><code>vrrp_instance VI_1 {
+  state MASTER
+  interface eth0
+  virtual_router_id 51
+  priority 101
+  advert_int 1
+
+authentication {
+  auth_type PASS
+  auth_pass password
+}
+
+virtual_ipaddress {
+VIRTUAL_IP
+}
+
+}
+</code></pre><h6 id="explanation">Explanation</h6>
+<p>In this configuration, keepalived communicate with its peers over eth0. For the primary server, the state configuration is set to “MASTER”
+and &ldquo;BACKUP&rdquo; for secondary node. During the election, the priority option is used to decide which member is elected. The decision is simply based on higher the number higher the priority. Set lower priority in backup server. We assign an ID for this cluster group that will be shared by both nodes, 51 here in example. ID could be from 0-255.</p>
+<p>Next, we create simple authentication for keepalived daemons to communicate with one another. This is just a basic measure to ensure that the servers are legitimate. Create an authentication sub-block. Inside, specify password authentication by setting the <code>auth_type</code>. For the <code>auth_pass</code> parameter, set a shared secret that will be used by both nodes.</p>
+<p><code>virtual_ipaddress</code> block is to keep the virtual ip for the cluster. Put here the virtual ip in all the nodes. It can be one or many.</p>
 <hr>
 <p>Pratik Gautam
 <a href="mailto:pratikgautm@gmail.com">pratikgautm@gmail.com</a></p>
@@ -149,6 +181,10 @@
 </li>
 
 <li class=""><a href="https://tecnep.com/haproxy/">Haproxy</a>
+  
+</li>
+
+<li class=""><a href="https://tecnep.com/php_nginx_mysql/">Php Nginx Mysql</a>
   
 </li>
 </ul>
