--- a/mailcleaner/mailcleaner_config/index.html
+++ b/mailcleaner/mailcleaner_config/index.html
@@ -253,6 +253,10 @@ If you want to select any domain to be not checked, mention it in the add an add
 <li class=""><a href="https://tecnep.com/haproxy/">Haproxy</a>
   
 </li>
+
+<li class=""><a href="https://tecnep.com/php_nginx_mysql/">Php Nginx Mysql</a>
+  
+</li>
 </ul>
 </nav>
 
