--- a/ssl/index.html
+++ b/ssl/index.html
@@ -158,6 +158,10 @@
 <li class=""><a href="https://tecnep.com/haproxy/">Haproxy</a>
   
 </li>
+
+<li class=""><a href="https://tecnep.com/php_nginx_mysql/">Php Nginx Mysql</a>
+  
+</li>
 </ul>
 </nav>
 
