--- a/system_resources/increase_hd/index.html
+++ b/system_resources/increase_hd/index.html
@@ -191,6 +191,10 @@ Then, create a new XFS partition.</p>
 <li class=""><a href="https://tecnep.com/haproxy/">Haproxy</a>
   
 </li>
+
+<li class=""><a href="https://tecnep.com/php_nginx_mysql/">Php Nginx Mysql</a>
+  
+</li>
 </ul>
 </nav>
 
