--- a/useful_command/index.html
+++ b/useful_command/index.html
@@ -302,6 +302,10 @@ v = verbose
 <li class=""><a href="https://tecnep.com/haproxy/">Haproxy</a>
   
 </li>
+
+<li class=""><a href="https://tecnep.com/php_nginx_mysql/">Php Nginx Mysql</a>
+  
+</li>
 </ul>
 </nav>
 
