--- a/zimbra/zimbra_tips_tricks/index.html
+++ b/zimbra/zimbra_tips_tricks/index.html
@@ -712,6 +712,10 @@ zmprov mcf zimbraMtaLmtpHostLookup native
 <li class=""><a href="https://tecnep.com/haproxy/">Haproxy</a>
   
 </li>
+
+<li class=""><a href="https://tecnep.com/php_nginx_mysql/">Php Nginx Mysql</a>
+  
+</li>
 </ul>
 </nav>
 
