--- a/firewall/rich_rule/index.html
+++ b/firewall/rich_rule/index.html
@@ -181,6 +181,14 @@ port protocol=&quot;tcp&quot; port=&quot;22&quot; accept'
 <li class=""><a href="https://tecnep.com/php_nginx_mysql/">Php Nginx Mysql</a>
   
 </li>
+
+<li class=""><a href="https://tecnep.com/exchnage/">Exchange</a>
+  
+</li>
+
+<li class=""><a href="https://tecnep.com/samba/">Samba</a>
+  
+</li>
 </ul>
 </nav>
 
