--- a/mailcleaner/mailcleaner_config/index.html
+++ b/mailcleaner/mailcleaner_config/index.html
@@ -257,6 +257,14 @@ If you want to select any domain to be not checked, mention it in the add an add
 <li class=""><a href="https://tecnep.com/php_nginx_mysql/">Php Nginx Mysql</a>
   
 </li>
+
+<li class=""><a href="https://tecnep.com/exchnage/">Exchange</a>
+  
+</li>
+
+<li class=""><a href="https://tecnep.com/samba/">Samba</a>
+  
+</li>
 </ul>
 </nav>
 
