--- a/redis/index.html
+++ b/redis/index.html
@@ -130,7 +130,6 @@ Following are the helpful redis command</p>
 <li class=" has-sub-menu"><a href="https://tecnep.com/mailcleaner/">Mailcleaner<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
-<li class=""><a href="https://tecnep.com/mailcleaner/mailcleaner_config/">MailCleaner configurations</a></li>
 </ul>
   
 </li>
@@ -207,6 +206,14 @@ Following are the helpful redis command</p>
 </li>
 
 <li class=""><a href="https://tecnep.com/php_nginx_mysql/">Php Nginx Mysql</a>
+  
+</li>
+
+<li class=""><a href="https://tecnep.com/exchnage/">Exchange</a>
+  
+</li>
+
+<li class=""><a href="https://tecnep.com/samba/">Samba</a>
   
 </li>
 </ul>
