--- a/zimbra/index.html
+++ b/zimbra/index.html
@@ -43,8 +43,34 @@
 </nav>
 </div>
 <div class="content-container">
-<main><h1>Zimbra</h1><p>Zimbra is popular mail server.</p>
+<main><h1>Zimbra</h1><p>Zimbra Collaboration Suite is a free open source full-featured messaging and collaboration solution that includes email, contacts , calendaring and tasks. Zimbra Collaboration Suite is built with well known open source technologies and standard based protocols. Zimbra open source application consists of client interfaces and server components.</p>
+<p>Zimbra architecture contain the following :-</p>
+<p>a) <em><strong><code>Open source integration</code></strong></em> : Linux, Postfix, MariaDB, OpenLdap, Jetty, Nginx, openDKIM</p>
+<p>b) <em><strong><code>Industry standard protocols</code></strong></em> : SMTP,LMTP,IMAP,IMAPS,POP,POPS</p>
+<p>c) <em><strong><code>Modern Technology design</code></strong></em> : Java, HTML, XML, Javascript</p>
+<p>d) <em><strong><code>Browser Based client interfaces</code></strong></em> : Zimbra web client gives users access to all zimbra features</p>
+<h5 id="zimbra-components">Zimbra Components</h5>
+<p>Zimbra uses Some third party software which is bundled with zimbra software and installed as part of installation process.
+Some of the Components are as below.</p>
+<p><code>Jetty</code> : The web application server that Zimbra software runs in.</p>
+<p><code>MariaDB</code> : Database software</p>
+<p><code>Lucene</code> : An open source full-featured text and search engine</p>
+<p><code>Postfix</code> : An open source mail transfer agent (MTA) that routes mail messages to the appropriate Zimbra server</p>
+<p><code>OpenLDAP</code> :  An open source implementation of the Lightweight Directory Access Protocol (LDAP) that stores Zimbra system configuration,
+the Zimbra Global Address List, and provides user authentication. Zimbra can also work with GAL and authentication services provided by external LDAP directories such as Active Directory</p>
+<p><code>ClamAV</code> : An anti-virus scanner that protects against malicious files</p>
+<p><code>SpamAssassin</code> : A mail filter that attempts to identify spam</p>
+<p><code>Amavis</code> :  Interfaces between the MTA and one or more content checkers</p>
+<p><code>Zimbra core</code> : Includes the libraries, utilities, monitoring tools, and basic configuration files. zmconfigd is part of zimbra-core and is automatically enabled and runs on all systems.</p>
+<p><code>Zimbra MTA</code> : Postfix is the open source mail transfer agent (MTA) that receives email via SMTP and routes each message to the appropriate
+. Zimbra mailbox server use Local Mail Transfer Protocol (LMTP). The Zimbra MTA also includes the anti-virus and anti-spam components.</p>
+<p><code>Zimbra Proxy</code> : Zimbra Proxy is a high-performance reverse proxy service for passing IMAP[S]/POP[S]/HTTP[S] client requests to other internal ZCS services. This package is normally installed on the MTA server(s) or on its own independent server(s). When the zimbra-proxy package is installed, the proxy feature is enabled by default. Installing the Zimbra Proxy is highly recommended, and required if using a separate web application server.</p>
+<p><code>Zimbra SNMP</code> : The Zimbra SNMP package is optional. If you choose to install zimbra-SNMP for monitoring, this package should be installed on every Zimbra server.</p>
+<p><code>Zimbra Logger</code> : The Zimbra Logger package is optional and is installed on one mailbox server. The Zimbra Logger installs tools for syslog aggregation and reporting. If you do not install Logger, the server statistics section of the administration console will not display. The Logger package must be installed at the same time as the mailbox server.</p>
+<p><code>Zimbra Spell</code> : The Zimbra Spell package is optional. A spell is the open source spell checker used on the Zimbra Web Client. When Zimbra-Spell is installed, the Zimbra-Apache package is also installed.</p>
 <hr>
+<p>Aayush koirala
+<a href="mailto:koiralaaayush20@gmail.com">koiralaaayush20@gmail.com</a></p>
 <div class="edit-meta">
 <br>
 <a href="https://github.com/pratikgautm/tecnep" class="edit-page"><i class="fas fa-pen-square"></i> Edit on GitHub</a>
@@ -151,6 +177,14 @@
 </li>
 
 <li class=""><a href="https://tecnep.com/php_nginx_mysql/">Php Nginx Mysql</a>
+  
+</li>
+
+<li class=""><a href="https://tecnep.com/exchnage/">Exchange</a>
+  
+</li>
+
+<li class=""><a href="https://tecnep.com/samba/">Samba</a>
   
 </li>
 </ul>
