--- a/zimbra/zimbra_tips_tricks/index.html
+++ b/zimbra/zimbra_tips_tricks/index.html
@@ -716,6 +716,14 @@ zmprov mcf zimbraMtaLmtpHostLookup native
 <li class=""><a href="https://tecnep.com/php_nginx_mysql/">Php Nginx Mysql</a>
   
 </li>
+
+<li class=""><a href="https://tecnep.com/exchnage/">Exchange</a>
+  
+</li>
+
+<li class=""><a href="https://tecnep.com/samba/">Samba</a>
+  
+</li>
 </ul>
 </nav>
 
