--- a/chrony/index.html
+++ b/chrony/index.html
@@ -227,6 +227,14 @@ DST active: n/a
 <li class=""><a href="https://tecnep.com/php_nginx_mysql/">Php Nginx Mysql</a>
   
 </li>
+
+<li class=""><a href="https://tecnep.com/exchnage/">Exchange</a>
+  
+</li>
+
+<li class=""><a href="https://tecnep.com/samba/">Samba</a>
+  
+</li>
 </ul>
 </nav>
 
