--- a/dns/dkim/index.html
+++ b/dns/dkim/index.html
@@ -201,6 +201,14 @@ p=MIGfMA0GCSqGSI...... is the actual DKIM public key of 1024 bits
 <li class=""><a href="https://tecnep.com/php_nginx_mysql/">Php Nginx Mysql</a>
   
 </li>
+
+<li class=""><a href="https://tecnep.com/exchnage/">Exchange</a>
+  
+</li>
+
+<li class=""><a href="https://tecnep.com/samba/">Samba</a>
+  
+</li>
 </ul>
 </nav>
 
