--- a/firewall/index.html
+++ b/firewall/index.html
@@ -169,6 +169,14 @@ Permanent configuration is loaded from XML files in <code>/usr/lib/firewalld</co
 <li class=""><a href="https://tecnep.com/php_nginx_mysql/">Php Nginx Mysql</a>
   
 </li>
+
+<li class=""><a href="https://tecnep.com/exchnage/">Exchange</a>
+  
+</li>
+
+<li class=""><a href="https://tecnep.com/samba/">Samba</a>
+  
+</li>
 </ul>
 </nav>
 
