--- a/keepalive/index.html
+++ b/keepalive/index.html
@@ -187,6 +187,14 @@ and &ldquo;BACKUP&rdquo; for secondary node. During the election, the priority o
 <li class=""><a href="https://tecnep.com/php_nginx_mysql/">Php Nginx Mysql</a>
   
 </li>
+
+<li class=""><a href="https://tecnep.com/exchnage/">Exchange</a>
+  
+</li>
+
+<li class=""><a href="https://tecnep.com/samba/">Samba</a>
+  
+</li>
 </ul>
 </nav>
 
