--- a/system_resources/increase_hd/index.html
+++ b/system_resources/increase_hd/index.html
@@ -195,6 +195,14 @@ Then, create a new XFS partition.</p>
 <li class=""><a href="https://tecnep.com/php_nginx_mysql/">Php Nginx Mysql</a>
   
 </li>
+
+<li class=""><a href="https://tecnep.com/exchnage/">Exchange</a>
+  
+</li>
+
+<li class=""><a href="https://tecnep.com/samba/">Samba</a>
+  
+</li>
 </ul>
 </nav>
 
