--- a/redis/index.html
+++ b/redis/index.html
@@ -130,6 +130,7 @@ Following are the helpful redis command</p>
 <li class=" has-sub-menu"><a href="https://tecnep.com/mailcleaner/">Mailcleaner<span class="mark closed">+</span></a>
   
 <ul class="sub-menu">
+<li class=""><a href="https://tecnep.com/mailcleaner/mailcleaner_config/">MailCleaner configurations</a></li>
 </ul>
   
 </li>
