--- a/samba/index.html
+++ b/samba/index.html
@@ -147,7 +147,8 @@ echo &quot;test&quot; &gt; hello.txt
 <p><img src="windows_share_step_3.PNG" alt="image"></p>
 <p>Finally you can see a drive is mounted.</p>
 <hr>
-<p>Sushant Joshi</p>
+<p>Sushant Joshi
+<a href="mailto:sushant41269@gmail.com">sushant41269@gmail.com</a></p>
 <div class="edit-meta">
 <br>
 <a href="https://github.com/pratikgautm/tecnep" class="edit-page"><i class="fas fa-pen-square"></i> Edit on GitHub</a>
